# PacificPlateGaussianDrift

./: README.md  pyproject.toml
data/: volcanoes_data.csv
results/: summary.json
scripts/: export_figures.py  run_analysis.py
src/pacific_plate_gaussian_drift/: __init__.py  design_matrix.py  fit.py  io.py  metrics.py  plots.py  uncertainty.py
tests/: test_fit_matches_lstsq.py
